# mandatehub

./: .gitignore  ANNOUNCEMENT.md  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  README.md  ROADMAP.md  SECURITY.md  pyproject.toml  wrangler.jsonc
.github/workflows/: ci.yml  release.yml
deploy/cloudflare/: README.md  vendor.sh  worker.py  wrangler.toml
deploy/local/: RUNBOOK.md  _metrics.py  backup.py  bazaar_check.sh  com.mandatehub.backup.plist  com.mandatehub.monitor.plist  com.mandatehub.operator.plist  com.mandatehub.tunnel.plist  discovery.py  monitor.py  netfetch.py  operator.py  products.py  stats.py  verify_state.py  (+2 more)
docs/: ARCHITECTURE.md  ASSET_SURVEY.md  BAZAAR.md  DEPLOY_CLOUDFLARE.md  EXECUTION_RECAPTURE.md  INTENT_MANDATES.md  LAUNCH.md  MULTIWORKER.md  OPERATING_AT_SCALE.md  OPERATIONS.md  OVERVIEW.md  RELEASING.md  TESTNET.md  THREAT_MODEL.md  X402.md
examples/: README.md  agent_tools.py  best_execution_recapture.py  intent_mandate_settlement.py  mandatehub_quickstart.ipynb  mcp_server.py  session_key_submandate.py  x402_best_exec.py  x402_facilitator.py  x402_live_loop.py  x402_live_preflight.py  x402_live_smoke.py  x402_pay.py  x402_remote_settle.py
mandatehub/: __init__.py
site/: _headers  index.html
specs/: best-exec.md  mandate.md
tests/: test_audit_log.py  test_execution.py  test_guard_verify.py  test_intent_batch.py  test_intent_bridge.py  test_intent_lifecycle.py  test_intent_mandate.py  test_intent_policy.py  test_intent_proof.py  test_intent_submandate.py  test_ledger.py  test_merkle.py  test_multiworker_poc.py  test_ops_tools.py  test_postgres_storage.py  test_rehydration.py  test_superrich_guards.py  test_types.py  test_wave3_products.py  test_x402.py  test_x402_best_exec.py  test_x402_remote.py
(+61 files in other folders)
